--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"ownerNumber": "687849547",
+	"ownerNumberr": "687849547",
+	"cr": "@FF NOBITA007",
+	"ownername": "FF NOBITA007",
+	"botname":"NOBITA-BOT",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  NOBITABOT」\nCreated By @FF NOBITA007"
 }
